--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ i.fa-solid.fa-arrow-up-right-from-square {
 }
 
 i.fa-brands.fa-github {
-  margin-right: 5.5rem;
+  margin-right: 10rem;
 }
 
 *, ::before, ::after {
@@ -290,7 +290,7 @@ i.fa-brands.fa-github {
   transform: translate(-50%, -50%);
   font-size: 25px;
   letter-spacing: 3px;
-  color: #000;
+  color: #fff;
 }
 
 .circle {
@@ -301,7 +301,7 @@ i.fa-brands.fa-github {
   animation: 1s linear infinite alternate boxMagic,
   4s linear infinite spinning;
   padding-top: 300px;
-  background-image: url(thomasbarrais.jpeg);
+  background-color: #000;
   background-size: cover;
   background-position: center;
 }
