--- a/style-mobile.css
+++ b/style-mobile.css
@@ -21,6 +21,20 @@ i.fa-brands.fa-github {
   flex-direction: column-reverse;
 }
 
+.testimonials-elem-profil:before {
+  content: "";
+  position: absolute;
+  top: 32px;
+  left: 0;
+  width: 100%;
+  height: 76.5%;
+  border: 2px solid #000;
+  box-sizing: border-box;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 50%;
+}
+
 .testimonials-elem-profil-text,
 .testimonials-elem-project-text {
   text-align: center;
@@ -33,7 +47,7 @@ i.fa-brands.fa-github {
 }
 
 .testimonials-elem-project img {
-  width: 85vw;
+  width: 90vw;
 }
 .testimonials-elem-project:hover {
   transform: scale(1);
